fix: website alignment

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -1,13 +1,11 @@
 .container {
-  display: flex;
   flex-direction: column;
   align-items: baseline;
-  width: 60%;
   background-color: $surface-color;
   border-radius: 20px;
   text-align: start;
-  padding: 15px;
   box-shadow: $box-shadow;
+  @include section;
 }
 .openingTag {
   display: flex;
