--- a/src/components/landing/landing.module.scss
+++ b/src/components/landing/landing.module.scss
@@ -4,10 +4,13 @@
 }
 
 .inner {
-  display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  @include section;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .bio {
@@ -68,17 +71,6 @@
 }
 
 @media (max-width: 768px) {
-  .bio {
-    font-size: 23px;
-    padding-left: 15%;
-    h2 {
-      font-size: 18px;
-    }
-    p {
-      font-size: 12px;
-    }
-  }
-
   .img {
     scale: 0.8;
   }
